# tchatchers

./: .dockerignore  .gitignore  .output.dot  Cargo.toml  Dockerfile_async  Dockerfile_back  Dockerfile_doc  Dockerfile_front  Dockerfile_migrations  Dockerfile_tct  LICENSE.md  Makefile.toml  README.md  SETUP.md  docker-compose.yml  docker-compose_dev.yml  nginx.conf  setup.sh  table.sql
.github/hooks/: pre-commit
.github/workflows/: ci.yml  docker_refresh.yml  update_of_deps.yml
kikers_back/: Cargo.toml
kikers_back/src/: main.rs  ws.rs
kikers_front/: Cargo.toml  Dockerfile  index.html  nginx.conf  tailwind.config.js
kikers_front/src/: main.rs
kikers_front/src/components/: feed.rs  filters.rs  footer.rs  mod.rs  navbar.rs  navlink.rs  postbar.rs  posts.rs  settings.rs
kikers_front/src/services/: chat.rs  event_bus.rs  message.rs  mod.rs
migrations/: 20220829174521_create_tables.down.sql  20220829174521_create_tables.up.sql
tchatchers_app/: tauri.conf.json
tchatchers_async/: Cargo.toml  README.md
tchatchers_async/src/: conf.yml  config.rs  main.rs
tchatchers_back/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
tchatchers_back/migrations/: 20220829174521_create_tables.up.sql  20230102170032_messages.down.sql  20230102170032_messages.up.sql  20230103190641_translations.down.sql  20230103190641_translations.up.sql  20230107192609_profiles.down.sql  20230107192609_profiles.up.sql  20230108135551_navlink.down.sql  20230108135551_navlink.up.sql  20230109173206_update_ts_on_chatter.down.sql  20230109173206_update_ts_on_chatter.up.sql  20230109190313_timezones.down.sql  20230109190313_timezones.up.sql  20230120221433_translations.down.sql  20230120221433_translations.up.sql  20230122184404_settings_translations.down.sql  20230122184404_settings_translations.up.sql  20230206220430_change_created_at_type.down.sql  20230206220430_change_created_at_type.up.sql  20230206220620_default_last_update_is_current.down.sql  20230206220620_default_last_update_is_current.up.sql  20230409175458_fix_typo.down.sql  20230409175458_fix_typo.up.sql  20230410192135_delete_tz_column.down.sql  20230410192135_delete_tz_column.up.sql  20230423185059_contextual_menu.down.sql  20230423185059_contextual_menu.up.sql  20230518163723_report_message_translation.down.sql  20230518163723_report_message_translation.up.sql  20230518164532_report_table.down.sql  20230518164532_report_table.up.sql  20230522174813_report_single_table.down.sql  20230522174813_report_single_table.up.sql  20230523212625_change_timestamp.down.sql  20230523212625_change_timestamp.up.sql  20230702105545_last_logon.down.sql  20230702105545_last_logon.up.sql  20230702112232_deleted_records.down.sql  20230702112232_deleted_records.up.sql  20230702121404_procedure_for_logged_on_users.down.sql  (+21 more)
tchatchers_back/src/: extractor.rs  main.rs  middleware.rs  validator.rs  ws.rs
tchatchers_back/src/api/: app_context.rs  locale.rs  message.rs  mod.rs  pfp.rs  user.rs  user_context.rs  verify.rs
tchatchers_back/src/api/admin/: mod.rs  translation.rs
tchatchers_back/tchatchers_core/: Cargo.toml
tchatchers_back/tchatchers_core/src/: jwt.rs  lib.rs  pool.rs  user.rs  ws_message.rs
tchatchers_cli_tools/: Cargo.toml  README.md  report.json
tchatchers_cli_tools/src/: errors.rs  main.rs
tchatchers_cli_tools/src/actions/: env.rs  message.rs  mod.rs  queue.rs  report.rs  room.rs  user.rs
tchatchers_cli_tools/src/args/: env.rs  message.rs  mod.rs  queue.rs  report.rs  room.rs  user.rs
tchatchers_cli_tools/src/common/: mod.rs  output.rs  user.rs
tchatchers_cli_tools/templates/: env  nginx.conf  nginx.proxy.conf
tchatchers_client/: tauri.conf.json
tchatchers_core/: Cargo.toml  README.md
tchatchers_core/src/: api_response.rs  app_context.rs  async_message.rs  authorization_status.rs  authorization_token.rs  common.rs  functional_token.rs  jwt.rs  lib.rs  locale.rs  manager.rs  navlink.rs  pool.rs  profile.rs  refresh_token.rs  report.rs  reported_message.rs  reported_user.rs  room.rs  serializable_token.rs  timezone.rs  translation.rs  user.rs  validation_error_message.rs  ws_message.rs
tchatchers_core/src/async_message/: async_payload.rs  mod.rs  processor.rs
tchatchers_core/src/config/: mail.yml  navlink.yml  translations.yml
tchatchers_core/src/mail/: mail.rs  mod.rs  template.rs
tchatchers_core/templates/: mail_styles.css  welcome.html
tchatchers_front/: .dockerignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  core  index.html  install_assets.sh  main.css  nginx.conf  pkg_rel.sh  report.json  tailwind.config.js
tchatchers_front/services/chat_service/: Cargo.toml
tchatchers_front/services/chat_service/src/: bus.rs  lib.rs  main.rs  service.rs
tchatchers_front/services/modal_service/: Cargo.toml
tchatchers_front/services/modal_service/src/: bus.rs  lib.rs  main.rs
tchatchers_front/services/rmenu_service/: Cargo.toml
tchatchers_front/services/rmenu_service/src/: lib.rs  main.rs
tchatchers_front/services/toast_service/: Cargo.toml
tchatchers_front/services/toast_service/src/: lib.rs  main.rs
tchatchers_front/src/: app.rs  lib.rs  main.rs  router.rs
tchatchers_front/src/components/: auth_checker.rs  auth_guard.rs  chat.rs  common.rs  disconnected_bar.rs  feed.rs  filter.rs  filters.rs  join_room.rs  logout.rs  mod.rs  modal.rs  navbar.rs  navlink.rs  not_found.rs  secured_route.rs  settings.rs  signin.rs  signup.rs  toast.rs  type_bar.rs  verify.rs
tchatchers_front/src/components/right_menu/: message_rmenu.rs  mod.rs  profile_rmenu.rs
tchatchers_front/src/services/: auth_bus.rs  chat.rs  chat_bus.rs  chat_service.rs  event_bus.rs  message.rs  mod.rs  modal_bus.rs  rmenu_bus.rs  toast_bus.rs
tchatchers_front/src/utils/: client_context.rs  jwt.rs  keyed_list.rs  language.rs  mod.rs  requester.rs
tchatchers_front_refact/: Cargo.toml
tchatchers_front_refact/src/: main.rs
tchatchers_macro/: Cargo.toml
tchatchers_macro/src/: lib.rs
