[profile.release]
lto = true
codegen-units = 1

[profile.release.package.tchatchers_back]
strip = true

[profile.release.package.tchatchers_async]
strip = true

[profile.release.package.tct]
strip = true

[profile.release.package.tchatchers_front]
opt-level = 'z'

[workspace]

members = [
    "tchatchers_core",
    "tchatchers_back",
    "tchatchers_front",
    "tchatchers_cli_tools",
    "tchatchers_async",
    "tchatchers_app"
]

