[package]
name = "tchatchers_async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
dotenv = { version = "0.15.0", default-features = false }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = { version = "0.9.29" }
tchatchers_core = { path = "../tchatchers_core" , features = ["async"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time", "signal"] }
