[package]
name = "tchatchers_async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenv = { version = "0.15.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
tchatchers_core = { path = "../tchatchers_core" , features = ["async"] }
tokio = { version = "1.44.2", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time", "signal"] }
