[package]
name = "tchatchers_back"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http1", "multipart"], default-features = false }
tokio = { version = "1.39", features = ["full"], default-features = false }
tchatchers_core = { path = "../tchatchers_core", features = ["back"] }
dotenv = "0.15.0"
futures-util = { version = "0.3.30" }
uuid = { version = "1.10.0", default-features = false }
tower-http = { version = "0.5.2", features = ["fs", "trace", "util", "request-id", "sensitive-headers", "timeout", "set-header"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
tracing = { default-features = false, version = "0.1.40" }
validator = { version = "0.18.1"}
serde = { default-features = false, version = "1.0.209" }
sqlx = {features = ["uuid", "postgres"], version = "0.8" }
tower = { default-features = false, version = "0.5.0" }
mime = "0.3.17"
anyhow = "1.0.86"
redis = { version = "0.26.1", features = ["aio", "tokio-comp"], default-features = false }
bincode = "1.3.3"
serde_json = "1.0.127"
