[package]
name = "tct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tchatchers_core = { path = "../tchatchers_core", features = ["cli"] }
clap = { version = "4.5.16", features = ["derive", "std"]}
dialoguer = { features = ["password"], default-features = false, version = "0.11.0" }
sqlx = { version = "0.8", features = ["macros"], default-features = false }
derive_more = { features = ["from", "constructor", "error"], default-features = false, version = "1.0.0" }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
dotenv = "0.15.0"
which = "6.0.3"
validator = "0.17.0"
log = "0.4.22"
env_logger = { version = "0.11.5" }
askama = { default-features = false, version = "0.12.1" }
clap-verbosity-flag = "2.2.1"
redis = { version = "0.26.1", features = ["aio", "tokio-comp"], default-features = false }
