[package]
name = "tct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tchatchers_core = { path = "../tchatchers_core", features = ["cli"] }
clap = { version = "4.5.26", features = ["derive", "std"]}
dialoguer = { features = ["password"], default-features = false, version = "0.11.0" }
sqlx = { version = "0.8", features = ["macros"], default-features = false }
derive_more = { features = ["from", "constructor"], default-features = false, version = "1.0.0" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
dotenv = "0.15.0"
which = "7.0.1"
validator = "0.19.0"
log = "0.4.25"
env_logger = { version = "0.11.6" }
askama = { default-features = false, version = "0.12.1" }
clap-verbosity-flag = "3.0.2"
redis = { version = "0.27.6", features = ["aio", "tokio-comp"], default-features = false }
