[package]
name = "tct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tchatchers_core = { path = "../tchatchers_core", features = ["cli"] }
clap = { version = "4.5.31", features = ["derive", "std"]}
dialoguer = { features = ["password"], default-features = false, version = "0.11.0" }
sqlx = { version = "0.8", features = ["macros"], default-features = false }
derive_more = { features = ["from", "constructor"], default-features = false, version = "2.0.1" }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
dotenv = "0.15.0"
which = "7.0.2"
validator = "0.20.0"
log = "0.4.26"
env_logger = { version = "0.11.6" }
askama = { default-features = false, version = "0.12.1" }
clap-verbosity-flag = "3.0.2"
redis = { version = "0.29.1", features = ["aio", "tokio-comp"], default-features = false }
