[package]
name = "tchatchers_core"
version = "0.1.0"
edition = "2021"

[features]
back = ["dep:sqlx", "dep:rust-argon2", "dep:axum", "dep:axum-extra", "dep:cookie", "dep:redis",  "dep:tokio", "dep:serde_json"]
front = ["uuid/js"]
cli = ["dep:sqlx", "dep:rust-argon2", "dep:clap", "dep:redis", "dep:tokio"]
async = ["dep:sqlx", "dep:redis", "dep:tokio"]


[dependencies]
chrono = { version = "0.4.38", features = ["clock", "serde"], default-features = false }
derivative = "2.2.0"
jsonwebtoken = { default-features = false, version = "8.3.0" }
rand = { default-features = false, version = "0.8.5" }
rust-argon2 = { version = "2", optional = true, default-features = false }
serde = { version = "1.0.204", features = ["rc"], default-features = false }
sqlx = { version = "0.7", optional = true ,  features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"], default-features = false }
validator = { version = "0.17.0", features = ["derive"], default-features = false }
axum = { version = "0.7.5", features = ["multipart"], optional = true , default-features = false }
lazy_static = "1.5.0"
derive_more = { features = ["display"], default-features = false, version = "0.99.18" }
log = "0.4.22"
axum-extra = { version = "0.9", features = ["cookie"], optional = true }
time = { default-features = false, version = "0.3.36" }
cookie = { version = "0.18.1", optional = true }
redis = { version = "0.25.4", optional = true, features = ["streams", "aio", "tokio-comp"], default-features = false }
clap = { version = "4.5.9", features = ["derive", "std"], optional = true}
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["fs"], optional=true }
tchatchers_macro = { path = "../tchatchers_macro"} 
bincode = "1.3.3"
serde_json = { version = "1.0.120", optional = true}
