[package]
name = "tchatchers_core"
version = "0.1.0"
edition = "2021"

[features]
back = ["dep:sqlx", "dep:rust-argon2", "dep:axum", "dep:axum-extra", "dep:cookie", "dep:redis",  "dep:tokio", "dep:serde_json"]
front = ["uuid/js"]
cli = ["dep:sqlx", "dep:rust-argon2", "dep:clap", "dep:redis", "dep:tokio"]
async = ["dep:sqlx", "dep:redis", "dep:tokio"]


[dependencies]
chrono = { version = "0.4.40", features = ["clock", "serde"], default-features = false }
derivative = "2.2.0"
jsonwebtoken = { default-features = false, version = "9.3.1" }
rand = { features = ["thread_rng"], default-features = false, version = "0.9.0" }
rust-argon2 = { version = "2", optional = true, default-features = false }
serde = { version = "1.0.218", features = ["rc"], default-features = false }
sqlx = { version = "0.8", optional = true ,  features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.15.1", features = ["v4", "serde"], default-features = false }
validator = { version = "0.20.0", features = ["derive"], default-features = false }
axum = { version = "^0.8", features = ["multipart"], optional = true , default-features = false }
derive_more = { features = ["display"], default-features = false, version = "2.0.1" }
log = "0.4.26"
axum-extra = { version = "^0.10", features = ["cookie"], optional = true }
time = { default-features = false, version = "0.3.37" }
cookie = { version = "0.18.1", optional = true }
redis = { version = "0.29.0", optional = true, features = ["streams", "aio", "tokio-comp"], default-features = false }
clap = { version = "4.5.31", features = ["derive", "std"], optional = true}
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["fs"], optional=true }
tchatchers_macro = { path = "../tchatchers_macro"} 
bincode = "1.3.3"
serde_json = { version = "1.0.139", optional = true}
