[package]
name = "tchatchers_front"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.5.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlDocument", "FileReader", "Event", "Navigator", "FormData"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
yew-router = "0.18.0"
tchatchers_core = { path = "../tchatchers_core", features = ["front"] }
modal_service = { path = "services/modal_service" }
toast_service = { path = "services/toast_service" }
rmenu_service = { path = "services/rmenu_service" }
chat_service = { path = "services/chat_service" }
chrono = { version = "0.4.38", features = ["serde"] }
js-sys = "0.3.69"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.17.0"
derive_more = "0.99.18"
bincode = "1.3.3"
