[package]
name = "tchatchers_core"
version = "0.1.0"
edition = "2021"


[features]
back = ["dep:sqlx"]


[dependencies]
jsonwebtoken = "8.1.1"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" , "postgres"], optional = true }
