[package]
name = "tchatchers_core"
version = "0.1.0"
edition = "2021"


[features]
back = ["dep:sqlx"]


[dependencies]
derivative = "2.2.0"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" , "postgres"], optional = true }
uuid = { version = "1.1.2", features = ["v4", "serde", "js"] }
