[package]
name = "chat_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
serde_json = "1.0.133"
tchatchers_core = { version = "0.1.0", path = "../../../tchatchers_core", features = ["front"] }
wasm-bindgen-futures = "0.4.47"
yew-agent = "0.3.0"
tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
