[package]
name = "rmenu_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde"] }
yew = "0.21.0"
yew-agent = "0.3.0"

